@@ -1,7 +1,7 @@
 SUBDIRS = Eris bindings test
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = eris-1.0.pc @ERIS_POLL_PKGCONFIGS@
+pkgconfig_DATA = eris-1.2.pc @ERIS_POLL_PKGCONFIGS@
 
 doc:
 	doxygen eris.dox
