@@ -12,7 +12,7 @@ check: perl-check
 
 dist-hook: perl-dist-hook
 
-install: perl-install
+install-hook: perl-install
 
 ## ************** Specific Modules ****************
 
@@ -22,7 +22,7 @@ if PERL_BINDINGS
 ## so that the module gets rebuilt, the dependence on the build lib
 ## ensures the rebuild happens
 perl-makefile.stamp: perl/Makefile.PL perl/*/Makefile.PL perl/compile_flags.pl \
-			$(top_builddir)/Eris/.libs/liberis-1.0.so perl/*.h
+			$(top_builddir)/Eris/.libs/liberis-1.2.so perl/*.h
 	cd perl && perl Makefile.PL PREFIX=$(prefix) LIB=$(libdir)/perl
 	touch perl-makefile.stamp
 
