@@ -1,5 +1,5 @@
 #if HAVE_GLIB
-pollglibdir = $(includedir)/Eris-1.0/Eris
+pollglibdir = $(includedir)/Eris-1.2/Eris
 
 pollglib_HEADERS = PollGlib.h PollGlibFD.h PollGlibSource.h PollGlibVersion.h
 #endif
